tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/assoc-type.rs:2:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `NonConstAdd: ~const Add` is not satisfied
  --> $DIR/assoc-type.rs:35:16
   |
LL |     type Bar = NonConstAdd;
   |                ^^^^^^^^^^^ the trait `~const Add` is not implemented for `NonConstAdd`
   |
   = help: the trait `Add` is implemented for `NonConstAdd`
note: required by a bound in `Foo::Bar`
  --> $DIR/assoc-type.rs:31:15
   |
LL |     type Bar: ~const Add;
   |               ^^^^^^^^^^ required by this bound in `Foo::Bar`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
